--- a/src/App.css
+++ b/src/App.css
@@ -32,23 +32,27 @@
 
 /* Scrollbar */
 /* width */
-#news ::-webkit-scrollbar {
-  width: 20px;
+#news ::-webkit-scrollbar,
+#resources ::-webkit-scrollbar {
+  width: 12px;
 }
 
 /* Track */
-#news ::-webkit-scrollbar-track {
+#news ::-webkit-scrollbar-track,
+#resources ::-webkit-scrollbar-track {
   /* box-shadow: inset 0 0 5px grey;  */
   border-radius: 10px;
 }
  
 /* Handle */
-#news ::-webkit-scrollbar-thumb {
+#news ::-webkit-scrollbar-thumb,
+#resources ::-webkit-scrollbar-thumb {
   background: rgb(236, 59, 38) ;
   border-radius: 10px;
 }
 
 /* Handle on hover */
-#news ::-webkit-scrollbar-thumb:hover {
+#news ::-webkit-scrollbar-thumb:hover,
+#resources ::-webkit-scrollbar-thumb:hover {
   background: rgb(167, 41, 27); 
 }
